kubernetes/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      type: database
  template:
    metadata:
      labels:
        app: postgres
        type: database
    spec:
      containers:
        - name: postgres
          image: postgres:17.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-volume-claim
