kubernetes/postgres/postgres-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: postgres
spec:
  selector:
    app: postgres
    type: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
