kubernetes/postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 5432 # Backend Port
      port: 5432 # Port  Service is exposing
  selector:
    app: postgres
    type: database

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-nodeport
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
